--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "resend": "^6.7.0",
     "three": "^0.181.2"
   },
   "devDependencies": {
