--- a/package.json
+++ b/package.json
@@ -11,14 +11,26 @@
   "dependencies": {
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
+    "@tailwindcss/typography": "^0.5.19",
     "framer-motion": "^12.26.1",
+    "gray-matter": "^4.0.3",
+    "katex": "^0.16.27",
     "next": "^15.5.9",
     "ogl": "^1.0.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "rehype-katex": "^7.0.1",
+    "rehype-raw": "^7.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-html": "^16.0.1",
+    "remark-math": "^6.0.0",
+    "remark-rehype": "^11.1.2",
     "resend": "^6.7.0",
-    "three": "^0.181.2"
+    "three": "^0.181.2",
+    "unified": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
